@@ -61,7 +61,8 @@ public:
 	virtual Gump_button *on_button(Game_window *gwin, int mx, int my);
 					// Add object.
 	virtual int add(Game_object *obj, int mx = -1, int my = -1,
-			int sx = -1, int sy = -1, bool dont_check = false);
+			int sx = -1, int sy = -1, bool dont_check = false,
+						bool combine = false);
 					// Paint it and its contents.
 	virtual void paint(Game_window *gwin);
 
