@@ -64,7 +64,8 @@ public:
 	virtual void update_gump(Game_window *gwin);
 
 	virtual int add(Game_object *obj, int mx = -1, int my = -1,
-			int sx = -1, int sy = -1, bool dont_check = false);
+			int sx = -1, int sy = -1, bool dont_check = false,
+						bool combine = false);
 
 	virtual Container_game_object *find_actor(int mx, int my);
 
