@@ -297,12 +297,14 @@ int Paperdoll_gump::add
 	Game_object *obj,
 	int mx, int my,			// Screen location of mouse.
 	int sx, int sy,			// Screen location of obj's hotspot.
-	bool dont_check			// Skip volume check.
+	bool dont_check,		// Skip volume check.
+	bool combine			// True to try to combine obj.  MAY
+					//   cause obj to be deleted.
 	)
 {
 	Game_object *cont = find_object(mx, my);
 	
-	if (cont && cont->add(obj))
+	if (cont && cont->add(obj, false, combine))
 		return (1);
 	
 	int index = find_closest(mx, my, 1);
@@ -310,7 +312,7 @@ int Paperdoll_gump::add
 	if (index != -1 && container->add_readied(obj, index))
 		return (1);
 
-	if (container->add(obj, dont_check))
+	if (container->add(obj, dont_check, combine))
 		return (1);
 
 	return (0);
