@@ -97,7 +97,8 @@ public:
 					// Remove an object.
 	virtual void remove(Game_object *obj);
 					// Add an object.
-	virtual int add(Game_object *obj, int dont_check = 0);
+	virtual bool add(Game_object *obj, bool dont_check = false,
+							bool combine = false);
 					// Drop another onto this.
 	virtual int drop(Game_object *obj);
 					// Render.
